import { render, screen } from '@testing-library/react';
// import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Calendar } from './Calendar';

describe('Calendar', () => {
  const renderBasicCalendar = (props = {}) => {
    return render(<Calendar data-testid="calendar" {...props} />);
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicCalendar();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches disabled state snapshot', () => {
      const { container } = renderBasicCalendar({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches selected state snapshot', () => {
      const { container } = renderBasicCalendar({ selected: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches focused state snapshot', () => {
      const { container } = renderBasicCalendar({ focused: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches hover state snapshot', () => {
      const { container } = renderBasicCalendar({ hover: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicCalendar();
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });
  });

  describe('States', () => {
    it('handles disabled state correctly', () => {
      const { container } = renderBasicCalendar();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles selected state correctly', () => {
      const { container } = renderBasicCalendar();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for selected state
    });
    it('handles focused state correctly', () => {
      const { container } = renderBasicCalendar();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for focused state
    });
    it('handles hover state correctly', () => {
      const { container } = renderBasicCalendar();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for hover state
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      const { container } = renderBasicCalendar();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicCalendar();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicCalendar();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      const { container } = renderBasicCalendar({ className: 'custom-class' });
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicCalendar({ ref });
      // Ref forwarding test - environment dependent
      // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      const { container } = renderBasicCalendar({ 'data-custom': 'test-value' });
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicCalendar({ children: undefined });
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicCalendar({ children: null });
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicCalendar({ className: '' });
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender, container } = renderBasicCalendar({ className: 'class1' });
      rerender(<Calendar data-testid="calendar" className="class2" />);
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(<Calendar data-testid="calendar" />);
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(<Calendar data-testid="calendar" />);
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicCalendar();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicCalendar();
      unmount();
      renderBasicCalendar();
      expect(screen.getByTestId('calendar')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
