// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Calendar > Snapshots > matches default snapshot 1`] = `
<div
  class="calendar__root rdp-root calendar"
  data-slot="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__months rdp-months"
  >
    <nav
      aria-label=""
      class="calendar__nav rdp-nav"
    >
      <button
        aria-label="Go to the Previous Month"
        class="button button--ghost button--icon calendar__button-previous rdp-button_previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to the Next Month"
        class="button button--ghost button--icon calendar__button-next rdp-button_next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </nav>
    <div
      class="calendar__month rdp-month"
    >
      <div
        class="calendar__month-caption rdp-month_caption"
      >
        <span
          aria-live="polite"
          class="calendar__caption-label calendar__caption-label--label rdp-caption_label"
          role="status"
        >
          September 2025
        </span>
      </div>
      <table
        aria-label="September 2025"
        aria-multiselectable="false"
        class="rdp-month_grid"
        role="grid"
      >
        <thead
          aria-hidden="true"
        >
          <tr
            class="calendar__weekdays rdp-weekdays"
          >
            <th
              aria-label="Sunday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Su
            </th>
            <th
              aria-label="Monday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Mo
            </th>
            <th
              aria-label="Tuesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Tu
            </th>
            <th
              aria-label="Wednesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              We
            </th>
            <th
              aria-label="Thursday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Th
            </th>
            <th
              aria-label="Friday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Fr
            </th>
            <th
              aria-label="Saturday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-weeks"
        >
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, August 31st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-08-31"
              data-month="2025-08"
              data-outside="true"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="Monday, September 1st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-01"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Tuesday, September 2nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-02"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Wednesday, September 3rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-03"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Thursday, September 4th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-04"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="Friday, September 5th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-05"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="Saturday, September 6th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-06"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 7th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-07"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="Monday, September 8th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-08"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="Tuesday, September 9th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-09"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="Wednesday, September 10th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-10"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="Thursday, September 11th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-11"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="Friday, September 12th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-12"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="Saturday, September 13th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-13"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 14th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-14"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="Today, Monday, September 15th, 2025"
              class="calendar__day rdp-day calendar__today rdp-today"
              data-day="2025-09-15"
              data-today="true"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="Tuesday, September 16th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-16"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="Wednesday, September 17th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-17"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="Thursday, September 18th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-18"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="Friday, September 19th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-19"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="Saturday, September 20th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-20"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 21st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-21"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="Monday, September 22nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-22"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="Tuesday, September 23rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-23"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="Wednesday, September 24th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-24"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="Thursday, September 25th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-25"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="Friday, September 26th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-26"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="Saturday, September 27th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-27"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 28th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-28"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="Monday, September 29th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-29"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="Tuesday, September 30th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-30"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="Wednesday, October 1st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-01"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Thursday, October 2nd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-02"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Friday, October 3rd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-03"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Saturday, October 4th, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-04"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="calendar__root rdp-root calendar"
  data-slot="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__months rdp-months"
  >
    <nav
      aria-label=""
      class="calendar__nav rdp-nav"
    >
      <button
        aria-label="Go to the Previous Month"
        class="button button--ghost button--icon calendar__button-previous rdp-button_previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to the Next Month"
        class="button button--ghost button--icon calendar__button-next rdp-button_next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </nav>
    <div
      class="calendar__month rdp-month"
    >
      <div
        class="calendar__month-caption rdp-month_caption"
      >
        <span
          aria-live="polite"
          class="calendar__caption-label calendar__caption-label--label rdp-caption_label"
          role="status"
        >
          September 2025
        </span>
      </div>
      <table
        aria-label="September 2025"
        aria-multiselectable="false"
        class="rdp-month_grid"
        role="grid"
      >
        <thead
          aria-hidden="true"
        >
          <tr
            class="calendar__weekdays rdp-weekdays"
          >
            <th
              aria-label="Sunday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Su
            </th>
            <th
              aria-label="Monday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Mo
            </th>
            <th
              aria-label="Tuesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Tu
            </th>
            <th
              aria-label="Wednesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              We
            </th>
            <th
              aria-label="Thursday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Th
            </th>
            <th
              aria-label="Friday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Fr
            </th>
            <th
              aria-label="Saturday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-weeks"
        >
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, August 31st, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__outside rdp-outside"
              data-day="2025-08-31"
              data-disabled="true"
              data-month="2025-08"
              data-outside="true"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="Monday, September 1st, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-01"
              data-disabled="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Tuesday, September 2nd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-02"
              data-disabled="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Wednesday, September 3rd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-03"
              data-disabled="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Thursday, September 4th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-04"
              data-disabled="true"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="Friday, September 5th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-05"
              data-disabled="true"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="Saturday, September 6th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-06"
              data-disabled="true"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 7th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-07"
              data-disabled="true"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="Monday, September 8th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-08"
              data-disabled="true"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="Tuesday, September 9th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-09"
              data-disabled="true"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="Wednesday, September 10th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-10"
              data-disabled="true"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="Thursday, September 11th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-11"
              data-disabled="true"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="Friday, September 12th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-12"
              data-disabled="true"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="Saturday, September 13th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-13"
              data-disabled="true"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 14th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-14"
              data-disabled="true"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="Today, Monday, September 15th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__today rdp-today"
              data-day="2025-09-15"
              data-disabled="true"
              data-today="true"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="Tuesday, September 16th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-16"
              data-disabled="true"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="Wednesday, September 17th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-17"
              data-disabled="true"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="Thursday, September 18th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-18"
              data-disabled="true"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="Friday, September 19th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-19"
              data-disabled="true"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="Saturday, September 20th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-20"
              data-disabled="true"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 21st, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-21"
              data-disabled="true"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="Monday, September 22nd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-22"
              data-disabled="true"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="Tuesday, September 23rd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-23"
              data-disabled="true"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="Wednesday, September 24th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-24"
              data-disabled="true"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="Thursday, September 25th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-25"
              data-disabled="true"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="Friday, September 26th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-26"
              data-disabled="true"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="Saturday, September 27th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-27"
              data-disabled="true"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 28th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-28"
              data-disabled="true"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="Monday, September 29th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-29"
              data-disabled="true"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="Tuesday, September 30th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled"
              data-day="2025-09-30"
              data-disabled="true"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="Wednesday, October 1st, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__outside rdp-outside"
              data-day="2025-10-01"
              data-disabled="true"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Thursday, October 2nd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__outside rdp-outside"
              data-day="2025-10-02"
              data-disabled="true"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Friday, October 3rd, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__outside rdp-outside"
              data-day="2025-10-03"
              data-disabled="true"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Saturday, October 4th, 2025"
              class="calendar__day rdp-day calendar__disabled rdp-disabled calendar__outside rdp-outside"
              data-day="2025-10-04"
              data-disabled="true"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar > Snapshots > matches focused state snapshot 1`] = `
<div
  class="calendar__root rdp-root calendar"
  data-slot="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__months rdp-months"
  >
    <nav
      aria-label=""
      class="calendar__nav rdp-nav"
    >
      <button
        aria-label="Go to the Previous Month"
        class="button button--ghost button--icon calendar__button-previous rdp-button_previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to the Next Month"
        class="button button--ghost button--icon calendar__button-next rdp-button_next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </nav>
    <div
      class="calendar__month rdp-month"
    >
      <div
        class="calendar__month-caption rdp-month_caption"
      >
        <span
          aria-live="polite"
          class="calendar__caption-label calendar__caption-label--label rdp-caption_label"
          role="status"
        >
          September 2025
        </span>
      </div>
      <table
        aria-label="September 2025"
        aria-multiselectable="false"
        class="rdp-month_grid"
        role="grid"
      >
        <thead
          aria-hidden="true"
        >
          <tr
            class="calendar__weekdays rdp-weekdays"
          >
            <th
              aria-label="Sunday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Su
            </th>
            <th
              aria-label="Monday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Mo
            </th>
            <th
              aria-label="Tuesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Tu
            </th>
            <th
              aria-label="Wednesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              We
            </th>
            <th
              aria-label="Thursday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Th
            </th>
            <th
              aria-label="Friday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Fr
            </th>
            <th
              aria-label="Saturday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-weeks"
        >
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, August 31st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-08-31"
              data-month="2025-08"
              data-outside="true"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="Monday, September 1st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-01"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Tuesday, September 2nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-02"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Wednesday, September 3rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-03"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Thursday, September 4th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-04"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="Friday, September 5th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-05"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="Saturday, September 6th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-06"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 7th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-07"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="Monday, September 8th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-08"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="Tuesday, September 9th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-09"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="Wednesday, September 10th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-10"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="Thursday, September 11th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-11"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="Friday, September 12th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-12"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="Saturday, September 13th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-13"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 14th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-14"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="Today, Monday, September 15th, 2025"
              class="calendar__day rdp-day calendar__today rdp-today"
              data-day="2025-09-15"
              data-today="true"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="Tuesday, September 16th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-16"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="Wednesday, September 17th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-17"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="Thursday, September 18th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-18"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="Friday, September 19th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-19"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="Saturday, September 20th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-20"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 21st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-21"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="Monday, September 22nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-22"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="Tuesday, September 23rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-23"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="Wednesday, September 24th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-24"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="Thursday, September 25th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-25"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="Friday, September 26th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-26"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="Saturday, September 27th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-27"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 28th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-28"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="Monday, September 29th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-29"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="Tuesday, September 30th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-30"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="Wednesday, October 1st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-01"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Thursday, October 2nd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-02"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Friday, October 3rd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-03"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Saturday, October 4th, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-04"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar > Snapshots > matches hover state snapshot 1`] = `
<div
  class="calendar__root rdp-root calendar"
  data-slot="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__months rdp-months"
  >
    <nav
      aria-label=""
      class="calendar__nav rdp-nav"
    >
      <button
        aria-label="Go to the Previous Month"
        class="button button--ghost button--icon calendar__button-previous rdp-button_previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to the Next Month"
        class="button button--ghost button--icon calendar__button-next rdp-button_next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </nav>
    <div
      class="calendar__month rdp-month"
    >
      <div
        class="calendar__month-caption rdp-month_caption"
      >
        <span
          aria-live="polite"
          class="calendar__caption-label calendar__caption-label--label rdp-caption_label"
          role="status"
        >
          September 2025
        </span>
      </div>
      <table
        aria-label="September 2025"
        aria-multiselectable="false"
        class="rdp-month_grid"
        role="grid"
      >
        <thead
          aria-hidden="true"
        >
          <tr
            class="calendar__weekdays rdp-weekdays"
          >
            <th
              aria-label="Sunday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Su
            </th>
            <th
              aria-label="Monday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Mo
            </th>
            <th
              aria-label="Tuesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Tu
            </th>
            <th
              aria-label="Wednesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              We
            </th>
            <th
              aria-label="Thursday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Th
            </th>
            <th
              aria-label="Friday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Fr
            </th>
            <th
              aria-label="Saturday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-weeks"
        >
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, August 31st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-08-31"
              data-month="2025-08"
              data-outside="true"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="Monday, September 1st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-01"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Tuesday, September 2nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-02"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Wednesday, September 3rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-03"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Thursday, September 4th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-04"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="Friday, September 5th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-05"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="Saturday, September 6th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-06"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 7th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-07"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="Monday, September 8th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-08"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="Tuesday, September 9th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-09"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="Wednesday, September 10th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-10"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="Thursday, September 11th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-11"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="Friday, September 12th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-12"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="Saturday, September 13th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-13"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 14th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-14"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="Today, Monday, September 15th, 2025"
              class="calendar__day rdp-day calendar__today rdp-today"
              data-day="2025-09-15"
              data-today="true"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="Tuesday, September 16th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-16"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="Wednesday, September 17th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-17"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="Thursday, September 18th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-18"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="Friday, September 19th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-19"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="Saturday, September 20th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-20"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 21st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-21"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="Monday, September 22nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-22"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="Tuesday, September 23rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-23"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="Wednesday, September 24th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-24"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="Thursday, September 25th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-25"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="Friday, September 26th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-26"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="Saturday, September 27th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-27"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 28th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-28"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="Monday, September 29th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-29"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="Tuesday, September 30th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-30"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="Wednesday, October 1st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-01"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Thursday, October 2nd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-02"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Friday, October 3rd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-03"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Saturday, October 4th, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-04"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar > Snapshots > matches selected state snapshot 1`] = `
<div
  class="calendar__root rdp-root calendar"
  data-slot="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__months rdp-months"
  >
    <nav
      aria-label=""
      class="calendar__nav rdp-nav"
    >
      <button
        aria-label="Go to the Previous Month"
        class="button button--ghost button--icon calendar__button-previous rdp-button_previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to the Next Month"
        class="button button--ghost button--icon calendar__button-next rdp-button_next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right calendar__chevron rdp-chevron"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </nav>
    <div
      class="calendar__month rdp-month"
    >
      <div
        class="calendar__month-caption rdp-month_caption"
      >
        <span
          aria-live="polite"
          class="calendar__caption-label calendar__caption-label--label rdp-caption_label"
          role="status"
        >
          September 2025
        </span>
      </div>
      <table
        aria-label="September 2025"
        aria-multiselectable="false"
        class="rdp-month_grid"
        role="grid"
      >
        <thead
          aria-hidden="true"
        >
          <tr
            class="calendar__weekdays rdp-weekdays"
          >
            <th
              aria-label="Sunday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Su
            </th>
            <th
              aria-label="Monday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Mo
            </th>
            <th
              aria-label="Tuesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Tu
            </th>
            <th
              aria-label="Wednesday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              We
            </th>
            <th
              aria-label="Thursday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Th
            </th>
            <th
              aria-label="Friday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Fr
            </th>
            <th
              aria-label="Saturday"
              class="calendar__weekday rdp-weekday"
              scope="col"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-weeks"
        >
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, August 31st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-08-31"
              data-month="2025-08"
              data-outside="true"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="Monday, September 1st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-01"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Tuesday, September 2nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-02"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Wednesday, September 3rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-03"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Thursday, September 4th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-04"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="Friday, September 5th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-05"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="Saturday, September 6th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-06"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 7th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-07"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="Monday, September 8th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-08"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="Tuesday, September 9th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-09"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="Wednesday, September 10th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-10"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="Thursday, September 11th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-11"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="Friday, September 12th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-12"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="Saturday, September 13th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-13"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 14th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-14"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="Today, Monday, September 15th, 2025"
              class="calendar__day rdp-day calendar__today rdp-today"
              data-day="2025-09-15"
              data-today="true"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="Tuesday, September 16th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-16"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="Wednesday, September 17th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-17"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="Thursday, September 18th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-18"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="Friday, September 19th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-19"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="Saturday, September 20th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-20"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 21st, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-21"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="Monday, September 22nd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-22"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="Tuesday, September 23rd, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-23"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="Wednesday, September 24th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-24"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="Thursday, September 25th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-25"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="Friday, September 26th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-26"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="Saturday, September 27th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-27"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr
            class="calendar__week rdp-week"
          >
            <td
              aria-label="Sunday, September 28th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-28"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="Monday, September 29th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-29"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="Tuesday, September 30th, 2025"
              class="calendar__day rdp-day"
              data-day="2025-09-30"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="Wednesday, October 1st, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-01"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="Thursday, October 2nd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-02"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="Friday, October 3rd, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-03"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="Saturday, October 4th, 2025"
              class="calendar__day rdp-day calendar__outside rdp-outside"
              data-day="2025-10-04"
              data-month="2025-10"
              data-outside="true"
              role="gridcell"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
